Nechci vypadat jak idiot

--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -22,17 +22,17 @@ import Layout from "../layouts/Layout.astro";
         <div id="motivace">
             <h2>Motivace</h2>
             <p>
-                Tato stránka byla vytvořena, jako osobní projekt. Má za úkol
-                zrychlit a usnadnit používání webových stránek školy - a to
-                hlavně funkce získávání novinek. Kód je k nalezení na <a href="https://github.com/PanJohnny/FastGymlit">https://github.com/PanJohnny/FastGymlit</a>.
+                Tato stránka byla vytvořena jako osobní projekt. Má za úkol
+                zrychlit a usnadnit používání webových stránek školy, a to
+                hlavně jejich infromační funkci. Kód je k nalezení na <a href="https://github.com/PanJohnny/FastGymlit">https://github.com/PanJohnny/FastGymlit</a>.
             </p>
         </div>
         <div id="fungovani">
             <h2>Jak to vlastně funguje</h2>
             <p>
-                Tahle stránka používá rss kanály školy k zobrazování dat. Vpodstatě je tohle taková čtečka. Na těchto stránlkách je dostupný endpoint <a href="/api/feed"><code>/api/feed</code></a>, který vrací hlavní stránku rss. Rss kanály školy jsou umístěny jako <code>/[kategorie]/feed</code> u hlavní stránky je to jen <code>/feed</code>.
+                Tahle stránka používá rss kanály školy k zobrazování dat. Na těchto stránlkách je dostupný endpoint <a href="/api/feed"><code>/api/feed</code></a>, který vrací hlavní stránku rss. Rss kanály školy jsou umístěny jako <code>/[kategorie]/feed</code> u hlavní stránky je to jen <code>/feed</code>.
             </p>
-            <p><ins><code>/api/feed</code> nějak na vercelu nefunguje. Prosím použijte tedy rss kanály školy pokud možno.</ins></p>
+            <p><ins><code>/api/feed</code> občas nefunguje na vercelu a zároveň vám nedává možnost ?paged=stránka jako RSS kanál školy.</ins></p>
             
             <p>Odpověd z našeho api endpointu vypadá následovně:</p>
             <script
@@ -50,11 +50,17 @@ import Layout from "../layouts/Layout.astro";
                 políčka autorství a dále. Teď se podíváme na všechny vychytávky,
                 které jsem vytvořil.
             </p>
+            <p>
+                Další z věcí je dostupnost jídelníčku a školní knihovny na jedné stránce.
+                Musím však dodat, že ne vše perfektně funguje a očekávajte příležitostní chyby.
+                Chyby nahlašujte zde: 
+                <a href="https://github.com/PanJohnny/FastGymlit/issues">https://github.com/PanJohnny/FastGymlit/issues</a>.
+            </p>
             <div id="jmenoucitele">
                 <h3>1) Odhadnutí skutečného autora článku</h3>
                 <p>
                     Jak jste si mohli všimnout, většina článků na www.gymlit.cz
-                    uvádí, že jsou od paní ředitelky, nebo od <code
+                    uvádí, že jsou od někoho z vedení, nebo od <code
                         >Administ</code
                     >rátora. Ale když si článek otevřete, tak je kompletně někdo
                     jiný pod ním podepsaný.
@@ -90,6 +96,11 @@ import Layout from "../layouts/Layout.astro";
                         uvedené při najetí myší na element (pokud není uvedeno, zobrazí
                         se jen skóre/"ředitelství").
                     </p>
+                    
+                    <p>
+                        Chápu že rozpoznávání na základě vysokoškolských titulů není nejlepší.
+                        Pokud Vás napadne lepší řešení napište mi.
+                    </p>
                     <img
                         src="/info/authorship1.png"
                         alt="Ukázka ukazující, že u paní RNDr. Rozumové je uvedená profese a skóre"
@@ -98,18 +109,32 @@ import Layout from "../layouts/Layout.astro";
             </div>
             <div id="nervi">
                 <h3>2) CAPS LOCK NENÍ MOC COOL</h3>
-                <p>Rozhodně to není časté, ale stát se to občas může. Pedagog zapne caps lock a místo <code>Název článku</code> napíše <code>NÁZEV ČLÁNKU</code>. Proto jsem vyvinul algoritmus, který detekuje jestli jsou nadpis jenom velká písmena a podle toho je zmenší. Jenom Vás upozorňuji, že tento algoritmus nerespektuje pravidla českého pravopisu.</p>
+                <p>Rozhodně to není časté, ale stát se to občas může. 
+                    Pedagog zapne caps lock a místo <code>Název článku</code> napíše <code>NÁZEV ČLÁNKU</code>. 
+                    Proto je na místě kód, který zjistí jestli jsou nadpis jenom velká písmena a podle toho je zmenší.
+                    <inc>Bohužel nemám způsob jak efektivně promítnout pravidla pravopisu do nadpisů :( Očekávejte tedy chyby.</ins>
+                </p>
                 <img src="/info/noshout.png" alt="Ukázka této funkce">
             </div>
             <div id="zjednodus">
-                <h3>3) [BETA] Zjednodušení textu</h3>
-                <i>Tato funkce je dostupná při zmáčknutí tlačítka a ještě není plně zpracovaná.</i>
-                <p>Smaže formátování od tvůrce článku a to z toho důvodu, že někteří autoři zarovnávají text na střed.</p>
+                <h3>3) Zjednodušení textu</h3>
+                <p>Smaže formátování článku, zároveň změní velikost obrázků a upraví text.<ins>Vím, že smajlíci dělají problémy :(</ins></p>
                 <h4>Před:</h4>
                 <img src="/info/zjednodus0.png" alt="Text je zarovaný ošklivě na střed">
                 <h4>Po:</h4>
                 <img src="/info/zjednodus1.png" alt="Text je zarovaný doleva">
+                <ins>Tyto obrázky už nejsou relevantní, tlačítko se přesunulo a už není v beta testování.</ins>
             </div>
+            <div id="dekuji">
+                <h2>Poděkování</h2>
+                <p>
+                    Děkuji Vám za využívání těchto stránek určitě to pro mě hodně znamená.
+                    Prosím obracejte se na mě se zpětnou vazbou :)
+                    <ins>Prozatím jsem nepřidal statistiky a tak nevidím reálnou navštěvovanost. Dejte mi vědět :*)</ins>
+                </p>
+            </div>
+            <hr />
+            Vytvořil Jan Štefanča, se všemi problémy v rámci školy (pokud nějaké budou) se na mně obracejte prostřednictvím mého školního emailu. S připomenutími nebo pro pokec využijte instagram/twitter. Věřím, že formu kontaktu naleznete.
         </div>
     </main>
 </Layout>
