Chybička se vloudila no...
Smazáno [BETA]

--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -14,7 +14,7 @@ import Layout from "../layouts/Layout.astro";
                     <ul>
                         <li><a href="#jmenoucitele">Odhadnutí skutečného autora článku</a></li>
                         <li><a href="#nervi">CAPS LOCK NENÍ MOC COOL</a></li>
-                        <li><a href="#zjednodus">[BETA] Zjednodušení textu</a></li>
+                        <li><a href="#zjednodus">Zjednodušení textu</a></li>
                     </ul>
                 </li>
             </ul>
