--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Informace o stránce | FastGymlit">
+<Layout title="Informace o stránce">
     <main class="container">
         <div id="obsah">
             <h2>Obsah</h2>
