--- a/src/pages/novinky.astro
+++ b/src/pages/novinky.astro
@@ -4,7 +4,7 @@ import Articles from "../components/Articles.astro";
 import { Category } from "./api/feed";
 ---
 
-<Layout title="Novinky | FastGymlit">
+<Layout title="Novinky">
 	<main>
 		<div class="articles">
 			<Articles category={Category.Novinky} page={parseInt(Astro.url.searchParams.get("page"))}></Articles>
